// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message Certificate {
  oneof parent {
    fixed64 external_data_provider_id = 1;
    fixed64 external_measurement_consumer_id = 2;
    string external_duchy_id = 3;
    fixed64 external_model_provider_id = 4;
  }
  fixed64 external_certificate_id = 5;

  // X.509 v3 subject key identifier.
  bytes subject_key_identifier = 6;

  // The beginning of the X.509 validity period, inclusive.
  google.protobuf.Timestamp not_valid_before = 7;

  // The end of the X.509 validity period, inclusive.
  google.protobuf.Timestamp not_valid_after = 8;

  // RFC 5280 revocation state.
  enum RevocationState {
    REVOCATION_STATE_UNSPECIFIED = 0;

    // Certificate is on hold and therefore invalid, possibly temporarily.
    HOLD = 1;

    // Certificate has been revoked. Terminal state.
    REVOKED = 2;
  }
  // Revocation state of the certificate reported by an API caller.
  //
  // Note that this is not guaranteed to reflect the actual revocation state
  // determined by the issuing certificate authority.
  RevocationState revocation_state = 9;

  message Details {
    // X.509 certificate in DER format.
    bytes x509_der = 1;
  }
  Details details = 10;
}
